--- a/costcalc/templates/auth/register.html
+++ b/costcalc/templates/auth/register.html
@@ -1,27 +1,43 @@
 {% extends 'base.html' %}
 
-{% block content%}
-<h1>注册</h1>
-<a href="{{ url_for('auth.login') }}">登陆</a>
-<form method="POST" action="{{ url_for('auth.register') }}">
-  {{ form.hidden_tag() }}
-  <p>
-    {{ form.username.label }}<br>
-    {{ form.username(size=32) }}<br>
-  </p>
-  <p>
-    {{ form.password.label }}<br>
-    {{ form.password(size=32) }}<br>
-  </p>
-  <p>
-    {{ form.password2.label }}<br>
-    {{ form.password2(size=32) }}<br>
-  </p>
-  <p>
-    {{ form.role.label }}<br>
-    {{ form.role() }}<br>
-  </p>
-  <p>{{ form.submit() }}</p>
-</form>
-
+{% block content %}
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow">
+                <div class="card-header">
+                    <h3 class="text-center">注册</h3>
+                </div>
+                <div class="card-body">
+                    <form method="POST" action="{{ url_for('auth.register') }}">
+                        {{ form.hidden_tag() }}
+                        <div class="mb-3">
+                            {{ form.username.label(class="form-label") }}
+                            {{ form.username(class="form-control", size=32) }}
+                        </div>
+                        <div class="mb-3">
+                            {{ form.password.label(class="form-label") }}
+                            {{ form.password(class="form-control", size=32) }}
+                        </div>
+                        <div class="mb-3">
+                            {{ form.password2.label(class="form-label") }}
+                            {{ form.password2(class="form-control", size=32) }}
+                        </div>
+                        <div class="mb-3">
+                            {{ form.role.label(class="form-label") }}
+                            {{ form.role(class="form-control") }}
+                        </div>
+                        <div class="d-grid">
+                            {{ form.submit(class="btn btn-primary") }}
+                        </div>
+                    </form>
+                    <hr>
+                    <div class="text-center">
+                        已有账号？<a href="{{ url_for('auth.login') }}">登录</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
