--- a/costcalc/templates/base.html
+++ b/costcalc/templates/base.html
@@ -10,14 +10,15 @@
     <link href="{{ url_for('static', filename='css/mermaid.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/select2.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <!-- Top Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{{ url_for('products.index') }}">CostCalc</a> 
+        <a class="navbar-brand-custom ps-3" href="{{ url_for('products.index') }}">CostCalc</a> 
         {% if current_user.is_authenticated %}
-        <div class="collapse navbar-collapse justify-content-end">
+        <div class="collapse navbar-collapse justify-content-end pe-3">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="btn nav-link nav-link-custom" href="{{ url_for('auth.login') }}">用户</a>
@@ -26,7 +27,7 @@
             </ul>
         </div>
         {% endif %}
-    </nav>
+    </nav>    
 
     <div class="container-flex">
         {% if current_user.is_authenticated %}
