--- a/costcalc/templates/auth/login.html
+++ b/costcalc/templates/auth/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %} 登录 {% endblock %}
 {% block content %}
 <div class="container mt-5">
   <div class="row justify-content-center">
