--- a/costcalc/templates/auth/register.html
+++ b/costcalc/templates/auth/register.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %} 注册 {% endblock %}
 {% block content %}
 <div class="container mt-5">
     <div class="row justify-content-center">
