--- a/costcalc/templates/products/new_product.html
+++ b/costcalc/templates/products/new_product.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% from 'bootstrap5/form.html' import render_form %}
 {% from 'products/_product_form.html' import product_form %}
-
+{% block title %} 新增产品 {% endblock %}
 {% block content %}
 <div class="container">
     <h4>新增产品</h4>
