--- a/costcalc/templates/resources/manage_labor.html
+++ b/costcalc/templates/resources/manage_labor.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% from 'bootstrap5/form.html' import render_form %}
-
+{% block title %} 人工管理 {% endblock %}
 {% block content %}
 <div class="container">
   <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newLaborModal">添加新人工</button>
