--- a/costcalc/templates/resources/manage_material.html
+++ b/costcalc/templates/resources/manage_material.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% from 'bootstrap5/form.html' import render_form %}
-
+{% block title %} 材料管理 {% endblock %}
 {% block content%}
 <div class="container">
   <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newMaterialModal">添加新材料</button>
