--- a/costcalc/templates/base.html
+++ b/costcalc/templates/base.html
@@ -22,15 +22,15 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link-custom nav-link-top d-flex align-items-center me-2" href="{{ url_for('auth.login') }}">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person me-1" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person me-1" viewBox="0 0 16 16">
                             <path d="M8 8a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
                             <path d="M8 9a4 4 0 0 1 4 4v1H4v-1a4 4 0 0 1 4-4z"/>
                         </svg> {{ current_user.username }}
                     </a>
                     <a class="nav-link-custom nav-link-top d-flex align-items-center me-2" href="{{ url_for('auth.logout') }}">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-box-arrow-right me-1" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-box-arrow-right me-1" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M10.5 11.5a.5.5 0 0 0 1 0V9h1a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1h-1V5.5a.5.5 0 0 0-1 0V7H8a2 2 0 0 0-2 2v1a2 2 0 0 0 2 2h1v1.5a.5.5 0 0 0 .5.5zM5 3.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 5.5 14h7a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 12.5 2h-7A1.5 1.5 0 0 0 4 3.5v2a.5.5 0 0 0-1 0v-2z"/>
-                        </svg> 退出
+                        </svg> 登出
                     </a>
                 </li>
             </ul>
