--- a/costcalc/templates/base.html
+++ b/costcalc/templates/base.html
@@ -18,45 +18,50 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand-custom ps-3" href="{{ url_for('products.index') }}">CostCalc</a>
         {% if current_user.is_authenticated %}
-        <div class="collapse navbar-collapse justify-content-end pe-3">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link-custom nav-link-top d-flex align-items-center me-2" href="{{ url_for('auth.login') }}">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person me-1" viewBox="0 0 16 16">
-                            <path d="M8 8a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-                            <path d="M8 9a4 4 0 0 1 4 4v1H4v-1a4 4 0 0 1 4-4z"/>
-                        </svg> {{ current_user.username }}
-                    </a>
-                    <a class="nav-link-custom nav-link-top d-flex align-items-center me-2" href="{{ url_for('auth.logout') }}">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-box-arrow-right me-1" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M10.5 11.5a.5.5 0 0 0 1 0V9h1a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1h-1V5.5a.5.5 0 0 0-1 0V7H8a2 2 0 0 0-2 2v1a2 2 0 0 0 2 2h1v1.5a.5.5 0 0 0 .5.5zM5 3.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 5.5 14h7a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 12.5 2h-7A1.5 1.5 0 0 0 4 3.5v2a.5.5 0 0 0-1 0v-2z"/>
-                        </svg> 登出
-                    </a>
-                </li>
-            </ul>
-        </div>
+        <ul class="navbar-nav ms-auto pe-3">
+            <li class="nav-item">
+                <a class="nav-link-custom nav-link-top d-flex align-items-center me-2" href="{{ url_for('auth.login') }}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person me-1" viewBox="0 0 16 16">
+                        <path d="M8 8a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                        <path d="M8 9a4 4 0 0 1 4 4v1H4v-1a4 4 0 0 1 4-4z"/>
+                    </svg> {{ current_user.username }}
+                </a>
+                <a class="nav-link-custom nav-link-top d-flex align-items-center me-2" href="{{ url_for('auth.logout') }}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-box-arrow-right me-1" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M10.5 11.5a.5.5 0 0 0 1 0V9h1a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1h-1V5.5a.5.5 0 0 0-1 0V7H8a2 2 0 0 0-2 2v1a2 2 0 0 0 2 2h1v1.5a.5.5 0 0 0 .5.5zM5 3.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 5.5 14h7a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 12.5 2h-7A1.5 1.5 0 0 0 4 3.5v2a.5.5 0 0 0-1 0v-2z"/>
+                    </svg> 登出
+                </a>
+            </li>
+        </ul>
         {% endif %}
+
+        <button class="navbar-toggler" style="margin-right: 20px;" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarCollapse" aria-controls="sidebarCollapse" aria-expanded="true" aria-label="Toggle sidebar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
     </nav>
+    
     
 
     <div class="container-flex">
         {% if current_user.is_authenticated %}
         <!-- Sidebar -->
-        <div class="sidebar">
-            <!-- <h5>导航栏</h5> -->
-            <ul class="nav flex-column">
-                <li class="nav-item">
-                    <a class="nav-link nav-link-custom {% if request.path == url_for('products.manage_product') %}active{% endif %}" href="{{ url_for('products.manage_product') }}">产品</a>
-                </li>
-                {% if current_user.role == 'admin' %}
-                <li class="nav-item">
-                    <a class="nav-link nav-link-custom {% if request.path == url_for('resources.manage_material') %}active{% endif %}" href="{{ url_for('resources.manage_material') }}">材料</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link nav-link-custom {% if request.path == url_for('resources.manage_labor') %}active{% endif %}" href="{{ url_for('resources.manage_labor') }}">人工</a>
-                </li>
-                {% endif %}
-            </ul>
+        <div class="collapse show" id="sidebarCollapse">
+            <div class="sidebar">
+                <!-- <h5>导航栏</h5> -->
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link nav-link-custom {% if request.path == url_for('products.manage_product') %}active{% endif %}" href="{{ url_for('products.manage_product') }}">产品</a>
+                    </li>
+                    {% if current_user.role == 'admin' %}
+                    <li class="nav-item">
+                        <a class="nav-link nav-link-custom {% if request.path == url_for('resources.manage_material') %}active{% endif %}" href="{{ url_for('resources.manage_material') }}">材料</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav-link-custom {% if request.path == url_for('resources.manage_labor') %}active{% endif %}" href="{{ url_for('resources.manage_labor') }}">人工</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
         </div>
         {% endif %}
 
