--- a/costcalc/templates/base.html
+++ b/costcalc/templates/base.html
@@ -33,11 +33,11 @@
                 </a>
             </li>
         </ul>
-        {% endif %}
 
-        <button class="navbar-toggler d-lg-none" style="margin-right: 20px;" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarCollapse" aria-controls="sidebarCollapse" aria-expanded="false" aria-label="Toggle sidebar">
+        <button class="navbar-toggler d-lg-none" style="margin-right: 20px; padding: 0;" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarCollapse" aria-controls="sidebarCollapse" aria-expanded="false" aria-label="Toggle sidebar">
             <span class="navbar-toggler-icon"></span>
-        </button>      
+        </button> 
+        {% endif %}
     </nav>
     
     
